--- a/uj/zajecia/24-25z/ljk4/zajecia/3/index.html
+++ b/uj/zajecia/24-25z/ljk4/zajecia/3/index.html
@@ -209,7 +209,7 @@
 		<li>이번 조사는 직접 방문해서 조사하는 방식을 사용했다.</li>
 		<li>종이 신문을 읽는 사람이 줄면서 인터넷의 사용도 줄었다.</li>
 		<li>조사된 가구 중에서 절반은 집으로 배달되는 신문을 읽는다.</li>
-		<li>이번 조사와 지난해 조사는 서로 같은 가구를 대상으로 했다.</li>
+		<li>이번 조사와 지난해 조사는 서로 같은 가구를 대상으로 했다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 <div class="exam-question">
@@ -236,7 +236,7 @@
 	</div>
 	<ol>
 		<li>고객은 주문한 피자를 취소하겠다고 말했다.</li>
-		<li>사고가 생겨서 배달 중이던 피자가 망가졌다.</li>
+		<li>사고가 생겨서 배달 중이던 피자가 망가졌다. <strong class="correct">✓</strong></li>
 		<li>오토바이가 빗길에 미끄러져서 김 씨가 다쳤다.</li>
 		<li>김 씨는 피자를 시킨 고객에게 연락하다 사고가 났다.</li>
 	</ol>
@@ -271,7 +271,7 @@
 	<ol>
 		<li>(가)-(라)-(나)-(다)</li>
 		<li>(가)-(나)-(라)-(다)</li>
-		<li>(다)-(가)-(나)-(라)</li>
+		<li>(다)-(가)-(나)-(라) <strong class="correct">✓</strong></li>
 		<li>(다)-(나)-(가)-(라)</li>
 	</ol>
 </div>
@@ -296,7 +296,7 @@
 	<ol>
 		<li>(나)-(다)-(가)-(라)</li>
 		<li>(나)-(라)-(다)-(가)</li>
-		<li>(다)-(나)-(가)-(라)</li>
+		<li>(다)-(나)-(가)-(라) <strong class="correct">✓</strong></li>
 		<li>(다)-(라)-(나)-(가)</li>
 	</ol>
 </div>
@@ -323,7 +323,7 @@
 	<ol>
 		<li>(가)-(라)-(다)-(나)</li>
 		<li>(가)-(다)-(라)-(나)</li>
-		<li>(나)-(가)-(다)-(라)</li>
+		<li>(나)-(가)-(다)-(라) <strong class="correct">✓</strong></li>
 		<li>(나)-(다)-(가)-(라)</li>
 	</ol>
 </div>
@@ -356,7 +356,7 @@
 	<ol>
 		<li>환하게 웃는 사람의 눈 모양과 비슷하다</li>
 		<li>보름달처럼 밝은 빛을 가지고 있지 않다</li>
-		<li>오래 지나지 않아 크고 환한 보름달이 된다</li>
+		<li>오래 지나지 않아 크고 환한 보름달이 된다 <strong class="correct">✓</strong></li>
 		<li>어두운 면과 밝은 면을 모두 포함하고 있다</li>
 	</ol>
 </div>
@@ -386,7 +386,7 @@
 	<ol>
 		<li>구입하기 어려운 것이</li>
 		<li>보관이 쉽지 않은 것이</li>
-		<li>재사용하기 곤란한 것이</li>
+		<li>재사용하기 곤란한 것이 <strong class="correct">✓</strong></li>
 		<li>용도가 다양하지 않은 것이</li>
 	</ol>
 </div>
