--- a/uj/zajecia/24-25z/wats3-1/index.html
+++ b/uj/zajecia/24-25z/wats3-1/index.html
@@ -84,6 +84,7 @@
 		<li><del>motoryzacja</del></li>
 		<li><del>niska dzietność</del></li>
 		<li><del>opieka psychologiczna/psychiatryczna</del></li>
+		<li><del>polityka</del></li>
 	</ul>
 </details>
 
@@ -178,18 +179,18 @@
 				<th scope="row" rowspan="3">7</th>
 				<td rowspan="3">29 listopada 2024</td>
 				<td class="schedule-presentation">Praca domowa 1</td>
-				<td class="schedule-presentation">Kinga Majcherczyk</td>
-				<td class="schedule-presentation">nagroda Nobla dla Han Gang</td>
+				<td class="schedule-presentation">Kinga Majcherczyk - nagroda Nobla dla Han Gang</td>
+				<td class="schedule-presentation"><a href="uj/zajecia/24-25z/wats3-1/pracedomowe/1">한강 책 ‘완판’...창고 재고 꺼내고, 인쇄소 ‘풀 가동’</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 2</td>
-				<td class="schedule-presentation">Matylda Siodmok</td>
-				<td class="schedule-presentation">skok gospodarczy</td>
+				<td class="schedule-presentation">Matylda Siodmok - skok gospodarczy</td>
+				<td class="schedule-presentation"><a href="uj/zajecia/24-25z/wats3-1/pracedomowe/2">'3저 호황' 덕분에 고성장한 전두환 시절 경제</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 3</td>
-				<td class="schedule-presentation">Paulina Wałęga</td>
-				<td class="schedule-presentation">praca dorywcza wśród studentów</td>
+				<td class="schedule-presentation">Paulina Wałęga - praca dorywcza wśród studentów</td>
+				<td class="schedule-presentation"><a href="uj/zajecia/24-25z/wats3-1/pracedomowe/3">방학 때도 못 노는 대학생...10명 중 8명 알바 중</a></td>
 			</tr>
 		</tbody>
 		<tbody>
@@ -202,8 +203,8 @@
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">polityka</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/wats3-1/zajecia/7">윤 대통령 계엄 선포부터 탄핵 소추까지 5분 요약</td>
 			</tr>
 		</tbody>
 		<tbody>
