--- a/uj/zajecia/24-25z/wats3-1/pracedomowe/3/index.html
+++ b/uj/zajecia/24-25z/wats3-1/pracedomowe/3/index.html
@@ -14,7 +14,7 @@
 
 <h1>Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 1</h1>
 
-<h2>Paulina Wałęga - nagroda Nobla dla Han Gang</h2>
+<h2>Paulina Wałęga - praca dorywcza wśród studentów</h2>
 
 <h3>어휘</h3>
 
