--- a/uj/zajecia/24-25z/wats3-1/zajecia/5/index.html
+++ b/uj/zajecia/24-25z/wats3-1/zajecia/5/index.html
@@ -184,7 +184,6 @@
 </ul>
 <p>11-1. 이 때문에 안전띠 미착용 시 사고가 나면</p>
 <ul>
-	<li></li>
 	<li>Z tego powodu, jeśli dojdzie do takiego wypadku,</li>
 </ul>
 <p>11-2. 차량 내 의자나 천장, 유리창 또는 동승자와 부딪혀</p>
@@ -235,10 +234,35 @@
 <h3>번역</h3>
 
 <p>14-1. 함진규 도공 사장은 “어린이날과 어버이날 등이 있는 5월은</p>
+<ul>
+	<li>Szef Koreańskiej Dyrekcji Dróg Krajowych i Autostrad, Ham Jinkyu, wypowiedział się następująco: „Maj, w którym jest dzień dziecka i dzień rodziców <span class="correct-maxpoints">[2/2 - Dzień Dziecka, Dzień Rodziców]</span></li>
+	<li>Ham Jin Gyu, Prezes Koreańskiej Agencji Autostrad, powiedział: “Maj, w którym obchodzony jest Dzień Dziecka oraz Dzień Rodzica, jest miesiącem rodziny, dlatego <span class="correct">[1,5 / 2 - Koreańskiej Dyrekcji Dróg Krajowych i Autostrad]</span></li>
+	<li>Prezes Ham Jin Gyu, prezes Dogong powiedział „Maj to miesiąc Dnia Dziecka i Dnia Rodziców <span class="correct">[1/2 - prezes Koreańskiej Dyrekcji Dróg Krajowych i Autostrad]</span></li>
+</ul>
 <p>14-2. 가정의 달로 중장거리 운행이 많아진다”며</p>
+<ul>
+	<li>Jest także miesiącem, w którym dużo jeździ się na średnie i długie odległości do rodziny” <span class="correct-maxpoints">[2/2]</span></li>
+	<li>zwiększa się liczba podróży na średnie i dalekie dystanse”. <span class="correct-maxpoints">[2/2]</span></li>
+	<li>w tym miesiącu zwiększa się liczba podróży średniej i dalekiej odległości” <span class="correct">[1,5/2 - brakuje „가정의 달로”]</span></li>
+</ul>
 <p>14-3. “고속도로는 특히 주행속도가 빠른 만큼</p>
+<ul>
+	<li>Zwrócił się także z prośbą: „Na autostradach jeździmy ze szczególnie dużą prędkością, <span class="correct-maxpoints">[2/2]</span></li>
+	<li>“Na autostradach prędkość jazdy jest szczególnie wysoka. <span class="correct-maxpoints">[2/2]</span></li>
+	<li>„Na autostradach, gdzie prędkość jazdy jest szczególnie szybka <span class="correct-maxpoints">[2/2]</span></li>
+</ul>
 <p>14-4. 안전띠 착용이 곧 생명과 직결된다는 걸 인식하고</p>
+<ul>
+	<li>A pasy bezpieczeństwa są powiązane z ludzkim życiem, <span class="correct">[1,5/2 - bezpośrednio powiązane]</span></li>
+	<li>Trzeba sobie zdawać sprawę z tego, że zapięcie pasów jest istotne dla zachowania życia. <span class="correct">[1,5/2 - bezpośrednio powiązane]</span></li>
+	<li>należy zdawać sobie sprawę, że zapinanie pasów bezpieczeństwa jest bezpośrednio związane z życiem <span class="correct-maxpoints">[2/2]</span></li>
+</ul>
 <p>14-5. 안전을 위해 꼭 안전띠를 매 달라”고 당부했다.</p>
+<ul>
+	<li>Używajmy więc ich w trakcie jazdy”. <span class="correct">[1,5/2 - koniecznie]</span></li>
+	<li>Dlatego zwracam się z prośbą, aby zapiąć pasy dla własnego bezpieczeństwa” - mówił. <span class="correct">[1/2 - koniecznie; bez „własnego”]</span></li>
+	<li>Zwrócił się z prośbą „zapinania pasów w celu zapewnienia bezpieczeństwa”. <span class="correct">[1,5/2 - koniecznie]</span></li>
+</ul>
 
 <h2>Źródło:</h2>
 
