--- a/uj/zajecia/24-25z/wats3-1/zajecia/6/index.html
+++ b/uj/zajecia/24-25z/wats3-1/zajecia/6/index.html
@@ -44,9 +44,21 @@
 <h3>번역</h3>
 
 <p>0. 서울 유치원 교사 신규 임용 ‘0′명, 세계 최저 출생률 충격파</p>
+<ul>
+	<li>0 nowych nauczycieli w przedszkolach - oto skutek najniższego przyrostu naturalnego na świecie</li>
+</ul>
 <p>1. 서울교육청이 내년 신규 공립유치원 교사를 한 명도 뽑지 않을 예정이다.</p>
+<ul>
+	<li>Kuratorium oświaty w Seulu w przyszłym roku nie planuje zatrudnić w publicznych przedszkolach ani jednego nowego nauczyciela.</li>
+</ul>
 <p>2-1. 세계 최악 저출생 영향으로 유치원 원아 수가 급감하면서</p>
+<ul>
+	<li>Wraz ze zmniejszającą się liczbą dzieci idących do przedszkola spowodowaną najniższym na świecie wskaźnikiem dzietności</li>
+</ul>
 <p>2-2. 문을 닫는 유치원이 속출해 교사를 새로 뽑을 여력이 없다는 것이다.</p>
+<ul>
+	<li>coraz więcej przedszkoli jest zamykanych, co doprowadziło do sytuacji, w której brakuje środków na zatrudnienie nowych nauczycieli.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -63,9 +75,21 @@
 <h3>번역</h3>
 
 <p>3. 대전은 1명, 광주 3명, 대구 4명만 뽑기로 하는 등 다른 지역들도 크게 다르지 않은 실정이다.</p>
+<ul>
+	<li>Miasto Daejeon zatrudni tylko jednego nauczyciela, miasto Gwangju trzech, a miasto Daegu czterech. W innych regionach sytuacja również zbytnio się nie różni.</li>
+</ul>
 <p>4. 서울의 공립 유치원 신규 교사 선발은 2019년 229명이었는데 90명(2021년) → 42명(2022년) → 10명(2023년)으로 거의 수직 낙하해 왔다.</p>
+<ul>
+	<li>Rekrutacja nowych nauczycieli do seulskich przedszkoli publicznych niemalże pionowo spada. W 2019 r. było to 229 osób, w 2021 r. już tylko 90, w 2022 r. 42 osoby, a w 2023 r. jedynie 10 osób.</li>
+</ul>
 <p>5-1. 초등학교 신규 교사도 17개 시·도교육청을 합쳐 올해 3561명 뽑았는데</p>
+<ul>
+	<li>W tym roku 17 kuratoriów miejskich i prowincjonalnych zatrudniło łącznie także 3561 nowych nauczycieli szkół podstawowych.</li>
+</ul>
 <p>5-2. 내년엔 404명이 줄어든 3157명을 선발한다.</p>
+<ul>
+	<li>W przyszłym roku będzie rekrutowanych 3157 osób, co jest spadkiem o o 404 osoby w stosunku do poprzedniego roku.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -99,11 +123,22 @@
 <h3>번역</h3>
 
 <p>6. 교대생들 가운데는 미래가 어둡다고 보고 재학 중 자퇴하고 다른 진로를 모색하는 학생이 크게 늘었다.</p>
+<ul>
+	<li>Wśród studentów pedagogiki wzrasta liczba osób, które pesymistycznie patrzą na swoją przyszłość i rezygnują ze studiów w celu znalezienia innej ścieżki zawodowej.</li>
+</ul>
 <p>7. 10~20년 전 교사직이 선망의 직업이었는데 저출생이 모든 것을 바꿔놓고 있다.</p>
+<ul>
+	<li>Choć jeszcze 10-20 lat temu zawód nauczyciela budził zazdrość, to obecnie w wyniku niskiego przyrostu naturalnego sytuacja ulega drastycznej zmianie.</li>
+</ul>
 <p>8. 근본 이유는 출생률이 세계 최저인 0.78명까지 떨어졌기 때문이다.</p>
+<ul>
+	<li>Fundamentalnym powodem jest najniższy na świecie przyrost naturalny, który spadł do 0,78 dziecka na osobę.</li>
+</ul>
 <p>9-1. 청년들은 미래가 어둡다고 보고 결혼을 안 하고,</p>
 <p>9-2. 결혼한 부부도 아이를 잘 키울 자신이 없어 아이 낳기를 기피하거나 낳아도 하나가 고작이다.</p>
 <p>10. 곳곳에서 한탄이 나오지만 단기간에 초저출생 위기를 극복할 뾰족한 대책은 안 보인다.</p>
+
+<h2 class="homework">Praca domowa</h2>
 
 <h3>어휘</h3>
 
@@ -131,9 +166,31 @@
 <h3>번역</h3>
 
 <p>11. 장기적으로 출생률을 끌어올리는 것과 함께 중요한 것이 중·단기적 적응 대책이다.</p>
+<ul>
+	<li>Poza długoterminowym podniesieniem przyrostu naturalnego ważne jest także przygotowanie krótko i średnioterminowych środków zaradczych. <span class="correct-maxpoints">[2/2]</span></li>
+	<li>Oprócz długotrwałego podnoszenia wskaźnika dzietności, ważny jest również średni lub krótki okres przystosowania. <span class="correct">[1/2 - inny sens drugiej części]</span></li>
+	<li>Poza zwiększeniem przyrostu naturalnego, ważną kwestią jest skupienie się na krótko i długoterminowych środkach przystosowawczych. <span class="correct">[1,5/2 - środkach zaradczych]</span></li>
+</ul>
 <p>12-1. 지금 유아교육학과, 교대 졸업생들이 임용 절벽의 고통을 겪는 것은</p>
+<ul>
+	<li>Aktualnie absolwenci pedagogiki przedszkolnej i wczesnoszkolnej oraz uniwersytetów pedagogicznych doświadczają trudności ze znalezieniem zatrudnienia, <span class="correct-maxpoints">[2/2 - obecnie]</span></li>
+	<li>Obecnie absolwenci pedagogiki przedszkolnej i wczesnoszkolnej zmagają się ze spadkiem zatrudnienia. <span class="correct">[1,5/2 - z niemożnością znalezienia pracy]</span></li>
+	<li>Aktualnie absolwenci pedagogiki przedszkolnej i wczesnoszkolnej doświadczają gehenny / cierpią z braku możliwości bycia zatrudnionym. <span class="correct-maxpoints">[2/2 - obecnie]</span></li>
+</ul>
 <p>12-2. 교수들 철밥통을 지켜주느라 필요한 학과·대학의 정원 감축을 실행하지 못했기 때문이다.</p>
+<ul>
+	<li>ponieważ obecni nauczyciele utrzymują swoje stanowiska w szkołach i na uniwersytetach. W związku z mniejszym zapotrzebowaniem na nowych nauczycieli wprowadzono redukcję liczby miejsc pracy. <span class="correct">[0,5/2 - w większości inny sens]</span></li>
+	<li>Powodem jest niemożność redukcji miejsc pracy na wydziałach i uczelniach, w celu zachowania stanowisk dla profesorów. <span class="correct">[1,5/2 - kierunkach i uczelniach]</span></li>
+	<li>Ponieważ nie udało się wprowadzić w życie redukcji miejsc zatrudnia na uczelni, przez ochronę posad nauczycieli akademickich. <span class="correct">[1,5/2 - brakuje „학과”]</span></li>
+</ul>
 <p>13. 전문가들이 10년 뒤 또 한 번 심각한 출생아 급감의 폭풍이 몰아닥칠 것이라고 경고하고 있다.</p>
+<ul>
+	<li>Eksperci ostrzegają przed kolejnym gwałtownym spadkiem liczby noworodków w ciągu najbliższej dekady. <span class="correct">[1/2 - odczuwalne skutki]</span></li>
+	<li>Eksperci ostrzegają, że przez najbliższe 10 lat nastąpi kolejny, poważny i gwałtowny spadek urodzeń. <span class="correct">[1/2 - odczuwalne skutki]</span></li>
+	<li>Eksperci ostrzegają, że za 10 lat ponownie pojawi się nawałnica spadku przyrostu naturalnego. <span class="correct">[0,5/2 - niejasne znaczenie po polsku]</span></li>
+</ul>
+
+<hr class="homework">
 
 <h3>어휘</h3>
 
