--- a/uj/zajecia/24-25z/wats3-2/index.html
+++ b/uj/zajecia/24-25z/wats3-2/index.html
@@ -84,7 +84,6 @@
 		<li>katastrofy przyrodnicze</li>
 		<li>kuchnia koreańska</li>
 		<li>moda (np. high fashion)</li>
-		<li>polityka</li>
 		<li>popkultura</li>
 		<li>relacje międzykoreańskie</li>
 		<li>społeczeństwo</li>
@@ -92,6 +91,7 @@
 		<li><del>botanika/florystyka</del></li>
 		<li><del>dyplomacja</del></li>
 		<li><del>mowa potoczna</del></li>
+		<li><del>polityka</del></li>
 		<li><del>sprawy kryminalne</del></li>
 		<li><del>starzenie się społeczeństwa</del></li>
 	</ul>
@@ -185,31 +185,26 @@
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row" rowspan="5">7</th>
-				<td rowspan="5">29 listopada 2024</td>
+				<th scope="row" rowspan="4">7</th>
+				<td rowspan="4">29 listopada 2024</td>
 				<td class="schedule-presentation">Praca domowa 1</td>
-				<td class="schedule-presentation">Noemi Matuszczak</td>
-				<td class="schedule-presentation">powodzie</td>
+				<td class="schedule-presentation">Katarzyna Gajda - współpraca Korei z ONZ</td>
+				<td class="schedule-presentation"><a href="uj/zajecia/24-25z/wats3-2/pracedomowe/1">대한민국의 은인' 유엔 6·25참전용사 등 70명 방한</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 2</td>
-				<td class="schedule-presentation">Katarzyna Gajda</td>
-				<td class="schedule-presentation">współpraca Korei z ONZ</td>
+				<td class="schedule-presentation">Aleksandra Przęczek - malarstwo koreańskie</td>
+				<td class="schedule-presentation"><a href="uj/zajecia/24-25z/wats3-2/pracedomowe/2">시와 함께한 그림, 시의도에 담긴 조선 선비들의 꿈</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 3</td>
-				<td class="schedule-presentation">Aleksandra Przęczek</td>
-				<td class="schedule-presentation">malarstwo koreańskie</td>
+				<td class="schedule-presentation">Diana Grigoryan - kultura megalityczna</td>
+				<td class="schedule-presentation"><a href="uj/zajecia/24-25z/wats3-2/pracedomowe/3">강화 고인돌 세계문화유산 등재 신청</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 4</td>
-				<td class="schedule-presentation">Diana Grigoryan</td>
-				<td class="schedule-presentation">kultura megalityczna</td>
-			</tr>
-			<tr>
-				<td class="schedule-presentation">Praca domowa 5</td>
-				<td class="schedule-presentation">Sofiia Martynenko</td>
-				<td class="schedule-presentation">kuchnia koreańska w czasie wojny koreańskiej</td>
+				<td class="schedule-presentation">Sofiia Martynenko - kuchnia koreańska w czasie wojny koreańskiej</td>
+				<td class="schedule-presentation"><a href="uj/zajecia/24-25z/wats3-2/pracedomowe/4">'스팸', 한국인 입맛 사로잡은 비결은</a></td>
 			</tr>
 		</tbody>
 		<tbody>
@@ -222,8 +217,8 @@
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">polityka</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/wats3-1/zajecia/7">윤 대통령 계엄 선포부터 탄핵 소추까지 5분 요약</td>
 			</tr>
 		</tbody>
 		<tbody>
@@ -237,26 +232,31 @@
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row" rowspan="4">10</th>
-				<td rowspan="4">20 grudnia 2024</td>
+				<th scope="row" rowspan="5">10</th>
+				<td rowspan="5">20 grudnia 2024</td>
+				<td class="schedule-presentation">Praca domowa 5</td>
+				<td class="schedule-presentation">Noemi Matuszczak - powodzie</td>
+				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
 				<td class="schedule-presentation">Praca domowa 6</td>
-				<td class="schedule-presentation">Karolina Żmuda</td>
-				<td class="schedule-presentation">Seongsu jako „najfajniejsza dzielnica świata”</td>
+				<td class="schedule-presentation">Karolina Żmuda - Seongsu jako „najfajniejsza dzielnica świata”</td>
+				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 7</td>
-				<td class="schedule-presentation">Bogdan Borawski</td>
-				<td class="schedule-presentation">techno-orientalizm</td>
+				<td class="schedule-presentation">Bogdan Borawski - techno-orientalizm</td>
+				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 8</td>
-				<td class="schedule-presentation">Martyna Zboch</td>
-				<td class="schedule-presentation">polityka zagraniczna Korei Płd. wobec UE</td>
+				<td class="schedule-presentation">Martyna Zboch - polityka zagraniczna Korei Płd. wobec UE</td>
+				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 9</td>
-				<td class="schedule-presentation">Wiktoria Puchała</td>
-				<td class="schedule-presentation">sprawa kryminalna Jeong Yu-jeong</td>
+				<td class="schedule-presentation">Wiktoria Puchała - sprawa kryminalna Jeong Yu-jeong</td>
+				<td class="schedule-presentation"></td>
 			</tr>
 		</tbody>
 		<tbody>
