--- a/uj/zajecia/24-25z/wats3-2/pracedomowe/2/index.html
+++ b/uj/zajecia/24-25z/wats3-2/pracedomowe/2/index.html
@@ -14,124 +14,130 @@
 
 <h1>Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 2</h1>
 
-<h2>Katarzyna Gajda - współpraca Korei z ONZ</h2>
+<h2>Aleksandra Przęczek - malarstwo koreańskie</h2>
 
 <h3>어휘</h3>
 
 <ul>
-	<li>은인 - wybawiciel</li>
-	<li>6·25전쟁 - wojna koreańska</li>
-	<li>유엔군 - siły militarne ONZ</li>
-	<li>참전용사 - weteran wojenny</li>
-	<li>유족 - rodzina zmarłego</li>
-	<li>방한하다 - odwiedzać Koreę</li>
-	<li>판문점 - wioska Panmundżom</li>
-	<li>국립서울현충원 - Cmentarz Narodowy w Seulu</li>
-	<li>참배하다 - oddać cześć</li>
-	<li>부산 유엔기념공원 - Cmentarz Pamięci Narodów Zjednoczonych w Busanie</li>
-	<li>추모식 - ceremonia upamiętnienia</li>
-	<li>국가보훈부 - Ministerstwo Spraw Patriotów i Weteranów</li>
-	<li>한국교포 - Koreańczyk mieszkający za granicą</li>
-	<li>거주 - zamieszkiwanie</li>
+	<li>시(화) – wiersz, poezja</li>
+	<li>음미하다 - delektować się (np. wierszem), podziwiać, doceniać</li>
+	<li>북송시대 - Północna dynastia Song</li>
+	<li>남송시대 – Południowa dynastia Song</li>
+	<li>문인 - literat</li>
+	<li>당의 – tu: z dynastii Tang</li>
+	<li>문장 – proza</li>
+	<li>서화 - kaligrafia</li>
 </ul>
 
 <h3>번역</h3>
 
-<p>0. 대한민국의 은인' 유엔 6·25참전용사 등 70명 방한</p>
-<p>„Wybawiciele Korei” - 70 osób, w tym weterani sił militarnych ONZ z czasów wojny koreańskiej, odwiedza Koreę</p>
-<p>1. 6·25전쟁 유엔군 참전용사와 유족 등 70명이 8∼11일 일정으로 방한한다.</p>
-<p>70 osób, w tym weterani sił militarnych ONZ oraz rodziny zmarłych w wojnie koreańskiej, odwiedzi Koreę na okres od 8 do 11 dni.</p>
-<p>2-1. 이들은 방한 기간 판문점 방문,</p>
-<p>Podczas wizyty w Korei odwiedzą Panmundżom,</p>
-<p>2-2. 국립서울현충원 참배,</p>
-<p>oddadzą cześć na Cmentarzu Narodowym w Seulu,</p>
-<p>2-3. 부산 유엔기념공원에서 열리는 참전용사 추모식 참석 등의 일정을 소화한다고</p>
-<p>oraz wezmą udział w ceremonii upamiętniającej weteranów wojennych odbywającej się na Cmentarzu Pamięci Narodów Zjednoczonych w Busanie</p>
-<p>2-4. 국가보훈부가 8일 밝혔다.</p>
-<p>- ogłosiło 8-go listopada Ministerstwo Spraw Patriotów i Weteranów.</p>
-<p>3-1. 미국과 영국, 캐나다, 네덜란드 등 10개국 참전용사 8명과 유가족 43명,</p>
-<p>8 weteranów oraz 43 członków rodzin zmarłych z 10 krajów, w tym ze Stanów Zjednoczonych, Wielkiej Brytanii, Kanady i Holandii,</p>
-<p>3-2. 외국에 거주 중인 한국교포 참전용사 10명과</p>
-<p>10 koreańskich weteranów wojennych mieszkających za granicą</p>
-<p>3-3. 이들의 가족 9명 등으로 구성됐다.</p>
-<p>oraz 9 osób będących członkami ich rodzin wchodzi w skład odwiedzających.</p>
+<p>0. 시를 음미하면 시 속에 그림이 있는 듯하고 그림을 보면 그림 속에 시가 있는 듯하다.</p>
+<p>„Delektując się wierszem, można odnieść wrażenie, że kryje się w nim obraz, a patrząc na obraz, wydaje się, że zawiera w sobie wiersz”.</p>
+<p>1. 북송시대 시인 소식이 당의 시인이자 화가였던 왕유의 그림을 본 뒤 남긴 말이다.</p>
+<p>To słowa poety Su Shi z Północnej dynastii Song, wypowiedziane po obejrzeniu obrazu Wanga You, który był zarówno poetą, jak i malarzem dynastii Tang.</p>
+<p>2. 중국 남송시대 이후 문인들은 그림과 시와 문장을 하나로 여겼다.</p>
+<p>Południowa dynastia Song w Chinach była okresem, w którym literaci zaczęli postrzegać malarstwo, poezję i prozę jako jedność.</p>
+<p>3. 시·서·화에 통달한 삼절은 문인들의 꿈이기도 했다.</p>
+<p>Opanowanie trzech sztuk – poezji, kaligrafii i malarstwa – było marzeniem każdego literata.</p>
 
 <h3>어휘</h3>
 
 <ul>
-	<li>최고령자 - najstarsza osoba</li>
-	<li>격전지 - zacięta bitwa</li>
-	<li>전투 - bitwa</li>
-	<li>참전하다 - brać udział w wojnie</li>
-	<li>육군 - armia</li>
-	<li>조종사 - pilot</li>
-	<li>출격하다 - wyruszyć zaatakować wroga</li>
-	<li>공로 - służba</li>
-	<li>충무무공훈장 - Order Zasługi Militarnej Chungmu</li>
-	<li>경북 = 경상북도</li>
-	<li>소령 - major</li>
-	<li>목숨 - życie</li>
-	<li>걸다 - ryzykować (życie)</li>
-	<li>고국 - ojczyzna</li>
-	<li>밟다 - kroczyć</li>
+	<li>주요 작가 – główny twórca</li>
+	<li>글귀 - fraza</li>
+	<li>서양화 - malarstwo zachodnie</li>
+	<li>동양화 - malarstwo wschodnie</li>
+	<li>특징 – charakterystyka</li>
+	<li>시의도(詩意圖) – „sieuido” (obraz interpretujący wiersz; 시 – wiersz, 도 – obraz)</li>
+	<li>내용 - treść</li>
+	<li>풀어내다 – wyjaśniać, przedstawiać</li>
+	<li>문인화 - malarstwo literackie</li>
+	<li>원칙 – zasada</li>
+	<li>명대 – dynastia Ming</li>
+	<li>경제발전 – rozwój gospodarczy</li>
+	<li>흉내(를) 내리다 – imitować</li>
+	<li>전성기 – złoty okres</li>
 </ul>
 
 <h3>번역</h3>
 
-<p>4-1. 최고령자는 올해 96세인 미국의 시마 히로시 옹,</p>
-<p>Najstarszą osobą jest kończący w tym roku 96 lat, mieszkający w Stanach Zjednoczonych, pan Hiroshi Shima,</p>
-<p>4-2. 영국의 윌리엄 니콜스 옹,</p>
-<p>pan William Nichols z Wielkiej Brytanii,</p>
-<p>4-3. 네덜란드의 야코프 콘스탄스 옹 등 3명이다.</p>
-<p>oraz 3 osoby, w tym Holender, pan Jacob Constance.</p>
-<p>5-1. 니콜스 옹은 6·25전쟁 당시 격전지였던 후크고지 전투에 참전하는 등 육군 조종사로</p>
-<p>Pan Nichols, który podczas wojny koreańskiej służył jako pilot w zaciętej bitwie pod Hook Hill,</p>
-<p>5-2. 145회 출격한 공로를 인정받아</p>
-<p>w uznaniu jego służby w 145 wyprawach bojowych,</p>
-<p>5-3. 이번에 충무무공훈장을 받을 예정이다.</p>
-<p>otrzyma Order Zasługi Militarnej Chungmu.</p>
-<p>6-1. 경북 안강지구 전투에서 육군 소령으로</p>
-<p>Jako major w armii w bitwie pod Angangiem w prowincji Gyeongsang Północny</p>
-<p>6-2. 목숨을 걸고 싸운 92세의 심만수 옹과</p>
-<p>ryzykujący w walce życie 92-letni pan Shim Man-su</p>
-<p>6-3. 그의 아내 송명자 여사도 고국 땅을 밟는다.</p>
-<p>i również jego żona, pani Song Myeong-ja, kroczą po ojczystej ziemi.</p>
-<p>7. 이들은 현재 미국에 거주 중이다.</p>
-<p>Obecnie mieszkają oni w Stanach Zjednoczonych.</p>
+<p>4. 주요 작가들이 문인이었던 점, 그리고 그림 속에 글귀가 있는 것은 서양화와 다른 동양화만의 특징이기도 하다.</p>
+<p>Fakt, że główni twórcy byli literatami, a w obrazach znajdowały się frazy, stanowiło cechę charakterystyczną wschodniego malarstwa, odróżniającą je od zachodniego.</p>
+<p>5. 특히 먼저 시가 있고 시의 뜻이나 내용을 풀어낸 그림을 ‘시의도(詩意圖)’라고 한다.</p>
+<p>Szczególnie cenione były obrazy, które interpretowały treść lub znaczenie wiersza, nazywane „sieuido”.</p>
+<p>6. 북송의 황제 휘종이 처음으로 시의도를 선보인 이래 시와 그림의 일치는 문인화의 원칙처럼 자리 잡았다.</p>
+<p>Od czasów cesarza Huizonga z Północnej dynastii Song, który jako pierwszy zaprezentował „sieuido”, połączenie obrazu i poezji stało się zasadą malarstwa literackiego.</p>
+<p>7. 명대 중기에는 경제발전으로 문인의 생활방식을 흉내 내려는 풍조가 생기면서 문인화도 전성기를 맞는다.</p>
+<p>W połowie dynastii Ming, dzięki rozwojowi gospodarczemu, nastąpiła moda na naśladowanie stylu życia literatów, co doprowadziło malarstwo literackie do jego złotego okresu.</p>
 
 <h3>어휘</h3>
 
 <ul>
-	<li>오찬 - formalny/uroczysty lunch</li>
-	<li>탱크부대 - jednostka pancerna</li>
-	<li>그래미상 - nagroda Grammy</li>
-	<li>금관악기 - blaszany instrument dęty</li>
-	<li>유일하다 - być jedynym</li>
-	<li>문화훈장 - Order Zasługi dla Kultury</li>
-	<li>전쟁기념관 - pomnik poległych w wojnie</li>
+	<li>미술이론가 – teoretyk sztuki</li>
+	<li>깨닫다 – nagle zrozumieć</li>
+	<li>돈오(頓悟) – nagłe oświecenie</li>
+	<li>빗대다 – porównywać</li>
+	<li>작품 – dzieło</li>
+	<li>활동하다 – być aktywnym, działać</li>
+	<li>매화 – śliwa</li>
+	<li>내음 – zapach</li>
+	<li>가지 끝에 – na końcu gałęzi</li>
+	<li>구도 – kompozycja</li>
+	<li>평범성 – prostota</li>
+	<li>시구 – wers</li>
+	<li>표현되다 - podkreślić</li>
 </ul>
 
 <h3>번역</h3>
 
-<p>8-1. 11일 열리는 감사 오찬에서는</p>
-<p>Podczas dziękczynnego uroczystego lunchu odbywającego się 11 listopada</p>
-<p>8-2. 6·25전쟁 당시 미군 탱크부대 참전용사의 아들이자</p>
-<p>syn weterana jednostki pancernej armii amerykańskiej podczas wojny koreańskiej,</p>
-<p>8-3. 그래미상 수상 음악가인 매트 카팅구브와</p>
-<p>a także zdobywca Nagrody Grammy, muzyk Matt Catingub</p>
-<p>8-4. 캐나다에서 금관악기 연주자로는 유일하게 최고</p>
-<p>oraz jedyny muzyk grający na blaszanych instrumentach dętych w Kanadzie,</p>
-<p>8-5. 문화훈장을 수상한 트럼펫 연주자 옌스 린더만이 기념공연을 한다.</p>
-<p>który zdobył Order Zasługi dla Kultury, trębacz Jens Lindemann, dadzą upamiętniający występ.</p>
-<p>9-1. 이들은 12일에는 서울 인사동과</p>
-<p>12 listopada odwiedzą Insa-dong w Seulu</p>
-<p>9-2. 용산 전쟁기념관을 둘러본 뒤 13일 출국한다.</p>
-<p>i po obejrzeniu pomnika poległych w wojnie w Yongsanie 13 listopada opuszczą Koreę.</p>
+<p>8. 이런 시대에 화가이자 미술이론가로 한 획을 그은 이가 남종화의 문을 연 동기창이다.</p>
+<p>W tych czasach Dong Qichang, malarz i teoretyk sztuki, zapoczątkował nurt południowego malarstwa literackiego.</p>
+<p>9. 동기창은 문인화가의 경지를 ‘불현듯이 깨닫는다’는 뜻의 ‘돈오’에 빗댔다.</p>
+<p>Dong Qichang porównał osiągnięcie malarza literackiego do „dono”, czyli nagłego oświecenia.</p>
+<p>10. 조선 시의도의 첫 작품은 17세기 초 활동한 문인 어몽룡의 ‘묵매도’라 할 수 있다.</p>
+<p>Pierwszym dziełem "sieuido" w Korei było "Mungmaedo" autorstwa Eo Mongryonga, literata z początku XVII wieku.</p>
+<p>11. ‘매화 내음 맡아 보니 봄은 가지 끝에 벌써 와 있었네’라는 구도와 진리의 평범성을 강조한 시구가 고목 끝에 핀 매화꽃으로 표현됐다.</p>
+<p>Był to wiersz podkreślający prostotę prawdy i obraz „kwitnącej na martwej gałęzi śliwy” oddający ukryty przekaz wiosny.</p>
+
+<h3>어휘</h3>
+
+<ul>
+	<li>경화세족 - zamożna elita społeczna z regionu Seulu i Gyeonggi</li>
+	<li>민감 – wrażliwość</li>
+	<li>중심 – centrum, środek</li>
+	<li>본격 – pelne, właściwe</li>
+	<li>확산되다 – rozprzestrzenić się</li>
+	<li>창작 – twórczość</li>
+	<li>교양 – wykształcenie</li>
+	<li>시험대 – miara</li>
+	<li>발맞추다 – nadążać, dostosowywać się</li>
+	<li>뛰어나다 – wybitny</li>
+	<li>감상 - podziwianie, ocena dzieła</li>
+	<li>상투화되다 - stać się banalnym</li>
+	<li>조락하다 - podupadać</li>
+	<li>사실적 묘사 - realistyczne przedstawienie</li>
+	<li>대상 – obiekty</li>
+	<li>본질 – esencja</li>
+	<li>압축하다 – zawęzić</li>
+	<li>화풍 – styl malarski</li>
+	<li>재촉하다 – przyśpieszyć, spowodować</li>
+</ul>
+
+<h3>번역</h3>
+
+<p>12. 조선의 시의도는 중국의 유행에 민감하게 반응했던 서울과 경기 인근의 경화세족들을 중심으로 18세기 이후 본격 확산됐다.</p>
+<p>"Sieuido" w Korei rozpowszechniło się w XVIII wieku, szczególnie wśród elity z Seulu i okolic Gyeonggi, która była wrażliwa na chińskie trendy.</p>
+<p>13. 그림 창작과 감상은 문인 교양의 시험대로 여겨졌고, 이에 발맞춰 뛰어난 화가들이 나타났다.</p>
+<p>Tworzenie i podziwianie obrazów uważano za miarę wykształcenia literatów, co przyczyniło się do pojawienia się wybitnych artystów.</p>
+<p>14. 시의도는 19세기 중반 이후 상투화되고 조락하게 된다.</p>
+<p>Po połowie XIX wieku „sieuido” stało się banalne i zaczęło podupadać.</p>
+<p>15. 사실적인 묘사 대신 대상의 본질만을 압축해 표현하는 추사의 화풍의 등장이 이를 재촉했다.</p>
+<p>Przyczynił się do tego styl Chusa, który zamiast realistycznego przedstawienia skupił się na esencji obiektów.</p>
 
 <h3>Źródło:</h3>
 
 <ul>
-	<li><a href="https://n.news.naver.com/mnews/article/001/0014316060">https://n.news.naver.com/mnews/article/001/0014316060</a></li>
+	<li><a href="https://n.news.naver.com/mnews/article/032/0002726558">https://n.news.naver.com/mnews/article/032/0002726558</a></li>
 </ul>
 
 </body></html>
