--- a/uj/zajecia/24-25z/wats3-2/zajecia/5/index.html
+++ b/uj/zajecia/24-25z/wats3-2/zajecia/5/index.html
@@ -230,11 +230,63 @@
 <h3>번역</h3>
 
 <p>10-1. 황 씨는 아침에 나갈 때 전날과 전혀 다른 옷으로 갈아입을 것,</p>
+<ul>
+	<li>Hwang wychodząc z rana przebrał się w zupełnie inne ubrania niż dnia poprzedniego, <span class="correct">[1,5/2 - Hwang polecił Jeongowi, żeby]</span></li>
+	<li>Kiedy Hwang wychodzi rano, przebiera się w zupełnie inny strój niż dzień wcześniej, <span class="correct">[1/2 - Hwang polecił Jeongowi, żeby; czas przeszły]</span></li>
+	<li>W poprzedni dzień z rana przed wyjściem Hwang przebrał się w inna odzież i <span class="correct">[0,5/2 - w większości inny sens]</span></li>
+	<li>Hwang, wychodząc rano, przebierał się w zupełnie inne ubranie niż poprzedniego dnia, <span class="correct">[1,5/2 - Hwang polecił Jeongowi, żeby]</span></li>
+	<li>Hwang zalecił, aby wychodząc rano przebrać się w ubrania inne niż poprzedniego dnia, <span class="correct-maxpoints">[2/2]</span></li>
+	<li>Hwang miał zmienić ubranie na zupełnie inne niż poprzedniego dnia, gdy wychodził rano; <span class="correct">[1,5/2 - Hwang polecił Jeongowi, żeby]</span></li>
+</ul>
 <p>10-2. 선글라스·모자를 착용해 알아보기 힘들게 할 것,</p>
+<ul>
+	<li>założył okulary i czapkę, żeby trudno było go rozpoznać. <span class="correct">[1,5/2 - okulary przeciwsłoneczne]</span></li>
+	<li>zakłada okulary przeciwsłoneczne oraz czapkę, żeby trudno było go rozpoznać, <span class="correct-maxpoints">[2/2]</span></li>
+	<li>założył okulary przeciwsłoneczne. Założenie czapki umożliwiło trudniejsze rozpoznanie osobowości, <span class="correct">[1/2 - odnosi się i do okularów i czapki]</span></li>
+	<li>zakładał okulary przeciwsłoneczne i czapkę, aby utrudnić rozpoznanie, <span class="correct-maxpoints">[2/2]</span></li>
+	<li>założyć okulary przeciwsłoneczne i czapkę, aby utrudnić rozpoznanie, <span class="correct-maxpoints">[2/2]</span></li>
+	<li>założyć okulary przeciwsłoneczne i kapelusz, aby utrudnić rozpoznanie, <span class="correct-maxpoints">[2/2]</span></li>
+	<li>10. Hwang powiedział, żeby zawsze podczas wychodzenia rano na zewnątrz zmienił ubrania, noszone w dniu poprzednim, założył okulary (przeciwsłoneczne) oraz czapkę, aby utrudnić rozpoznanie go. <span class="correct-maxpoints">[2/2 + 2/2]</span></li>
+</ul>
 <p>10-3. 호텔 인근에 미행이 있는지 항상 확인할 것 등 보안도 강조했다.</p>
+<ul>
+	<li>Dla zwiększenia bezpieczeństwa cały czas sprawdzał czy w pobliżu hotelu nikt go nie śledzi. <span class="correct-maxpoints">[2/2]</span></li>
+	<li>dla wzmocnienia bezpieczeństwa, zawsze sprawdza okolice hotelu, żeby zobaczyć, czy nie jest śledzony. <span class="correct-maxpoints">[2/2]</span></li>
+	<li>ponieważ wiedział, że w okolicach hotelu zawsze może ktoś śledzić, więc musiał wzmocnić swoje bezpieczeństwo. <span class="correct">[1,5/2 - bez „musiał”]</span></li>
+	<li>a także zawsze sprawdzał, czy w pobliżu hotelu nie ma śledzących go osób, podkreślając znaczenie bezpieczeństwa. <span class="correct">[1,5/2 - wzmocnić bezpieczeństwo]</span></li>
+	<li>i wzmocnić bezpieczeństwo zawsze sprawdzając, czy w okolicy hotelu nie ma śledzenia. <span class="correct-maxpoints">[2/2]</span></li>
+	<li>Dodatkowo, polecił mu sprawdzić, czy w okolicy hotelu nikt go nie śledzi, w celu wzmocnienia bezpieczeństwa. <span class="correct-maxpoints">[2/2]</span></li>
+	<li>I zawsze sprawdzać, czy w okolicy hotelu ktoś go śledzi – podkreślił również znaczenie bezpieczeństwa. <span class="correct">[1,5/2 - te wszystkie wcześniejsze zalecenia to właśnie wzmocnienie bezpieczeństwa]</span></li>
+</ul>
 <p>11-1. 정 씨는 실제로 황 씨가 알려준 방법으로</p>
+<ul>
+	<li>Jeong ruszył wg. wcześniej wyłożonego mu przez Hwanga planu <span class="correct">[1,5/2 - rzeczywiście]</span></li>
+	<li>Jeong’owi w sposób nauczony od Hwanga rzeczywiście <span class="correct-maxpoints">[2/2 - bez apostrofu]</span></li>
+	<li>W rzeczywistości Jeong postępował według metod podawanych przez Hwanga <span class="correct">[1,5/2 - rzeczywiście postępując według metod]</span></li>
+	<li>Jeong faktycznie zastosował się do metod podanych przez Hwanga, <span class="correct-maxpoints">[2/2]</span></li>
+	<li>Jeong dokładnie zastosował się do zaleceń Hwanga, <span class="correct">[1,5/2 - faktycznie]</span></li>
+	<li>Jeong faktycznie zastosował się do metod podanych Hwanga, <span class="correct-maxpoints">[2/2]</span></li>
+</ul>
 <p>11-2. 앙코르와트 부근에서 공작원들과 접선에 성공했고,</p>
+<ul>
+	<li>i z powodzeniem trafił na tajne spotkanie z agentami wywiadu w okolicy Angkor Watu. <span class="correct-maxpoints">[2/2 - udało mu się spotkać potajemnie]</span></li>
+	<li>udało spotkać się w tajemnicy z agentami w okolicy Angkor Wat, <span class="correct-maxpoints">[2/2]</span></li>
+	<li>udało się nawiązać kontakt z agentami w okolicach Angkor Watu, <span class="correct-maxpoints">[2/2]</span></li>
+	<li>odnosząc sukces w nawiązywaniu kontaktu z agentami w pobliżu Angkor Wat. <span class="correct-maxpoints">[2/2]</span></li>
+	<li> w okolicy Angkor Wat udało mu się wziąć udział w tajnym spotkaniu z agentami wywiadu i <span class="correct-maxpoints">[2/2]</span></li>
+	<li>udało mu się spotkać tajnych agentów w okolicach Angkor Wat, <span class="correct-maxpoints">[2/2]</span></li>
+	<li>11. Jeong postąpił według podanego przez Hwanga sposobu i potajemne spotkanie w pobliżu świątyni Angkor Wat z agentami wywiadu północnokoreańskiego powiodło się. <span class="correct">[1,5/2 - faktycznie; 2/2]</span></li>
+</ul>
 <p>11-3. 카페와 호텔에서 활동 동향 등을 보고했다.</p>
+<ul>
+	<li>Następnie sprawozdał kierunek działalności w kawiarni i hotelu. <span class="correct-maxpoints">[2/2]</span></li>
+	<li>skąd z hoteli oraz kawiarni składał sprawozdania o kierunkach ich prac. <span class="correct">[0/2 - inny sens]</span></li>
+	<li>a w kawiarni i hotelu pokazywano w jakim kierunku rozwija się działalność. <span class="correct">[1/2 - sprawozdawał]</span></li>
+	<li>W kawiarniach oraz hotelach raportował o kierunkach ich działań. <span class="correct">[1.5/2 - swoich działań]</span></li>
+	<li>dał sprawozdanie o kierunku działalności w kawiarniach i hotelach. <span class="correct">[1,5/2 - w kawiarni i hotelu]</span></li>
+	<li>W kawiarni i w hotelu raportowali o kierunkach działalności. <span class="correct">[1,5/2 - raportował]</span></li>
+	<li>złożył raport dotyczący kierunku działań oraz innych aktywności w kawiarniach i hotelach. <span class="correct">[1,5/2 - w kawiarni i hotelu]</span></li>
+</ul>
 
 <hr class="homework">
 
