--- a/uj/zajecia/24-25z/wats3-2/pracedomowe/4/index.html
+++ b/uj/zajecia/24-25z/wats3-2/pracedomowe/4/index.html
@@ -14,116 +14,141 @@
 
 <h1>Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 2</h1>
 
-<h2>Diana Grigoryan - kultura megalityczna</h2>
+<h2>Sofiia Martynenko - kuchnia koreańska w czasie wojny koreańskiej</h2>
 
 <h3>어휘</h3>
 
 <ul>
-	<li>고인돌 - dolmen</li>
-	<li>세계문화유산 - Światowe Dziedzictwo Kulturowe</li>
-	<li>등재 - wpisanie, rejestracja</li>
-	<li>신청 - wniosek, zgłoszenie</li>
-	<li>제출하다 - składać, dostarczać</li>
-	<li>문화재청 - Urząd ds. Dziedzictwa Kulturowego</li>
-	<li>국가유산청 - Państwowy Urząd Dziedzictwa</li>
-	<li>외교부 - Ministerstwo Spraw Zagranicznych</li>
-	<li>경유하다 - pośredniczyć (dosł. przechodzić przez)</li>
-	<li>세계유산위원회 - Komitet Światowego Dziedzictwa</li>
-	<li>높은 밀도 - wysoka gęstość</li>
-	<li>정식 - oficjalny, oficjalnie</li>
-	<li>-기 위해 - w celu (np. 등록하기 위해 – w celu rejestracji)</li>
+	<li>뜨끈하다 - być gorącym/ciepłym</li>
+	<li>부대찌개 - budae jjigae („zupa wojskowa”)</li>
+	<li>계절 - pora roku</li>
+	<li>듬뿍 - obficie, pełne, w dużej ilości</li>
+	<li>특히 - szczególnie</li>
+	<li>개인적으로 - osobiście</li>
+	<li>봇다 - puchnąć (부어서)</li>
+	<li>안타깝다 - przykro, smutno</li>
+	<li>언제나 - zawsze, kiedykolwiek</li>
 </ul>
 
 <h3>번역</h3>
 
-<p>0. 강화 고인돌 세계문화유산 등재 신청</p>
-<p>Wniosek o wpisanie dolmenów z wyspy Ganghwa do rejestru Światowego Dziedzictwa UNESCO</p>
-<p>1. 25년 전 오늘, 1999년 7월 20일, 인천시가 강화군 하점면·내가면 등 5개 지역 고인돌 66기를 세계문화유산으로 등록하기 위해 신청서를 제출했다.</p>
-<p>Równo 25 lat temu, 20 lipca 1999 roku, miasto Incheon złożyło wniosek w celu rejestracji 66 dolmenów z pięciu lokalizacji w powiecie Ganghwa, w tym Hajeom-myeon, Naega-myeon i innych, na listę Światowego Dziedzictwa Kulturowego.</p>
-<p>2-1. 강화 고인돌 유네스코 세계문화유산 등록 신청서는</p>
-<p>Wniosek o wpisanie dolmenów z Ganghwa na listę Światowego Dziedzictwa UNESCO</p>
-<p>2-2. 문화재청(현재 국가유산청)과 외교부를 경유해</p>
-<p>za pośrednictwem Urzędu ds. Dziedzictwa Kulturowego (obecnie Państwowego Urzędu ds. Dziedzictwa) oraz Ministerstwa Spraw Zagranicznych</p>
-<p>2-3. 세계유산위원회 사무국에 제출됐다.</p>
-<p>zostało złożone do sekretariatu Komitetu Światowego Dziedzictwa.</p>
-<p>3. 강화 고인돌은 고창·화순 고인돌과 함께 세계 문화유산으로 정식 등재됐다.</p>
-<p>Dolmeny z Ganghwa razem z dolmenami z Gochangu i Hwasunu zostały oficjalnie wpisane na listę Światowego Dziedzictwa.</p>
-<p>4. 등재 이유로 강화 고인돌이 한국은 물론, 세계 다른 어떤 나라보다 높은 밀도로 분포한다는 것이다.</p>
-<p>Powodem wpisania jest to, że dolmeny z Ganghwa cechują się wyższą gęstością występowania niż jakiekolwiek inne dolmeny w Korei, a także w jakimkolwiek innym krajach na świecie.</p>
+<p>1. 뜨끈한 부대찌개가 생각나는 계절이 찾아왔습니다.</p>
+<p>Nadeszła pora roku, która przypomina nam o gorącym budae jjigae.</p>
+<p>2. 햄과 소시지가 듬뿍 들어간 부대찌개는 언제나 맛있지만 추운 날이면 특히 더 생각이 나는 것 같습니다.</p>
+<p>Budae jjigae, pełne szynki i kiełbasy, zawsze mi smakuje, ale chyba najczęściej o nim myślę w zimne dni.</p>
+<p>3-1. 개인적으로는 부대찌개를 먹으면 얼굴과 다리가 부어서</p>
+<p>Osobiście, kiedy jem tę potrawę, puchną mi twarz i nogi,</p>
+<p>3-2. 매우 좋아하지만 자주 먹지 는 못하는 안타까운 음식 중 하나입니다.</p>
+<p>więc choć bardzo ją lubię, to jest to jedno z tych dań, których niestety nie mogę jeść zbyt często.</p>
 
 <h3>어휘</h3>
 
 <ul>
-	<li>채석 - wydobywanie</li>
-	<li>운반 - transportowanie</li>
-	<li>건설 - budowa</li>
-	<li>동북아 - północno-wschodnia Azja</li>
-	<li>형태 변화 - zmiana formy</li>
-	<li>유적 - zabytki</li>
-	<li>선사시대 - okres prehistoryczny</li>
-	<li>사회상 - struktura/obraz społeczna</li>
-	<li>지배층 - elity</li>
-	<li>제례 - rytuały</li>
-	<li>집약되다 - być skoncentrowanym, skumulowanym</li>
-	<li>유산 - dziedzictwo</li>
-	<li>거석문화 - kultura megalityczna</li>
-	<li>-다는 것이다 - konstrukcja wyrażająca opinie lub wyjaśnienia (np. 보여주고 있다는 것이다 – to, że ukazują…).</li>
+	<li>스팸 - „spam” (szynka konserwowa)</li>
+	<li>„빼놓을 수 없다” - „nie można pominąć”, „nie da się bez tego obejść”</li>
+	<li>통조림 - konserwa</li>
+	<li>1위 - pierwsze miejsce</li>
+	<li>주인공 - główny bohater</li>
+	<li>지키다 - utrzymywać (pozycje, miejsce)</li>
+	<li>„첫 발을 내딛다” - zrobić pierwszy krok, (pojawić się po raz pierwszy)</li>
+	<li>한국전쟁 - wojna koreańska</li>
+	<li>미군 - armia amerykańska</li>
+	<li>시초 - początek</li>
 </ul>
 
 <h3>번역</h3>
 
-<p>5-1. 또한, 고인돌 채석, 운반, 건설 등 동북아 고인돌 형태 변화에 중요한 증거를 보존하고 있으며,</p>
-<p>Ponadto dolmeny te zachowują ważne dowody na zmiany w formie dolmenów w północno-wschodniej Azji, takie jak ich wydobywanie, transportowanie i budowa</p>
-<p>5-2. 세계 다른 어떤 유적보다 선사시대 기술과 사회상을 생생하게 보여주고 있다는 것이다.</p>
-<p>oraz bardziej niż jakiekolwiek inne zabytki na świecie żywo ukazują technologie i strukturę społeczeństwa z okresu prehistorycznego.</p>
-<p>6. 강화 고인돌은 기원전 1500~1000년에 만들어진 지배층 무덤으로 추정하고 있다.</p>
-<p>Przypuszcza się, że dolmeny w Ganghwa zostały stworzone jako groby elit z okresu od 1500 do 1000 roku p.n.e.</p>
-<p>7. 선사시대 장례와 제례 문화가 집약돼있는 거석문화 유산이다.</p>
-<p>Jest to dziedzictwo megalitycznej kultury, w której skoncentrowane są prehistoryczne zwyczaje pogrzebowe i rytualne.</p>
+<p>4. 부대찌개 하면 '스팸'을 빼놓을 수 없는데요.</p>
+<p>Mówiąc o budae jjigae nie da się obejść bez szynki konserwowej, czyli tzw. „spamu”.</p>
+<p>5-1. 오랫동안 통조림 햄 시장 1위를 지키고 있는 '스팸'이</p>
+<p>„Spam”, który od dawna utrzymuje pozycję lidera na rynku wśród konserw mięsnych,</p>
+<p>5-2. 바로 오늘의 이야기 주인공입 니다.</p>
+<p>jest właśnie głównym bohaterem dzisiejszego tematu.</p>
+<p>6. 스팸이 국내에 첫 발을 내딛은 건 한국전쟁 당시 미군으로부터였습니다.</p>
+<p>Po raz pierwszy w Korei szynka konserwowa pojawiła się podczas wojny koreańskiej dzięki wojskom amerykańskim.</p>
+<p>7. 국내 통조림 햄의 시초였습니다.</p>
+<p>Była to pierwsza konserwa mięsna w Korei.</p>
 
 <h3>어휘</h3>
 
 <ul>
-	<li>들판 - pola</li>
-	<li>간척 - osuszanie terenu</li>
-	<li>조성하다 - tworzyć, kształtować</li>
-	<li>해안가 - nadbrzeże, teren przybrzeżny</li>
-	<li>언덕 - wzgórze</li>
-	<li>탁자식(북방식) - typ stołowy (północny)</li>
-	<li>바둑판식(남방식) - typ szachownicowy (południowy)</li>
-	<li>섞이다 - być wymieszanym, mieszać się</li>
-	<li>청동기시대 - epoka brązu</li>
-	<li>유물 - artefakty, przedmioty historyczne</li>
-	<li>출토되다 - zostać wydobytym, odkrytym</li>
-	<li>지하 - pod ziemią</li>
-	<li>노상 - na powierzchni ziemi</li>
-	<li>돌 방 - kamienna komora</li>
-	<li>판석 - płyty kamienne</li>
-	<li>덮개돌 - kamień nakrywkowy</li>
-	<li>-라 할 수 있다: Zwrot wyrażający możliwość uznania czegoś za coś lub wyrażenie opinii (np. 무덤이라 할 수 있다 – można je uznać za groby)</li>
+	<li>당시 - w tamtym czasie</li>
+	<li>경기도 - prowincja Gyeonggi</li>
+	<li>의정부 - miasto Uijeongbu</li>
+	<li>부대 - żołnierze, odziały (wojskowe)</li>
+	<li>주둔하다 -stacjonować (np. wojska)</li>
+	<li>베이크드 빈 - fasola w sosie pomidorowym</li>
+	<li>고추장 - gochujang (ostra pasta z papryki chili)</li>
+	<li>구하다 - zdobywać</li>
 </ul>
 
 <h3>번역</h3>
 
-<p>8-1. 지금은 이들 고인돌이 바다로부터 먼 곳에 있지만</p>
-<p>Teraz te dolmeny znajdują się z dala od morza, ale</p>
-<p>8-2. 오늘날 강화도 들판은 대부분 간척을 통해 조성했기 때문에</p>
-<p>ponieważ dzisiejsze pola na wyspie Ganghwa zostały głównie stworzone dzięki osuszaniu terenu,</p>
-<p>8-3. 실제로는 해안가 언덕에 조성한 무덤이라 할 수 있다.</p>
-<p>w rzeczywistości można je uznać za grobowce zbudowane na wzgórzach przybrzeżnych.</p>
-<p>9-1. 강화도 고인돌은 탁자식(북방식)과 바둑판식(남방식)이 섞여 있으며,</p>
-<p>Dolmeny z Ganghwa są mieszanką typów stołowego (północnego) i szachownicowego (południowego),</p>
-<p>9-2. 청동기시대 유물들이 출토되고 있다.</p>
-<p>a także wydobywane są z nich artefakty z epoki brązu.</p>
-<p>10-1. 탁자식 고인돌이란 지하에 돌 방을 만들지 않고</p>
-<p>Typ stołowy dolmenu to forma, w której nie buduje się kamiennej komory pod ziemią,</p>
-<p>10-2. 시신을 노상에 안치하고 사면을 판석으로 가린 뒤 그 위에 덮개돌을 얹은 형태를 말한다.</p>
-<p>tylko oznacza to formę, w której ciało zmarłego kładzie się na powierzchni ziemi, a boki są zasłonięte płytami kamiennymi, na które kładzie się kamień nakrywkowy.</p>
+<p>8. 당시 경기도 의정부에 미군 부대가 주둔해 있었는데요.</p>
+<p>W tamtym czasie w mieście Uijeongbu w prowincji Gyeonggi stacjonowały wojska amerykańskie.</p>
+<p>9-1. 의정부에 살던 사람들이 미군들로부터 쉽게 구할 수 있던 스팸과 소시지, 베이크드 빈,</p>
+<p>Mieszkańcy miasta Uijeongbu łatwo zdobywali od wojsk amerykańskich szynkę konserwową, kiełbasę, fasolę w sosie pomidorowym,</p>
+<p>9-2. 우리나라의 김치와 고추장 등을 넣어 만들어진 게 바로 부대찌개입니다.</p>
+<p>które razem z koreańskim kimchi i ostrą pastą gochujang połączyli właśnie w budae jjigae.</p>
+
+<h3>어휘</h3>
+
+<ul>
+	<li>하나 둘 - jeden po drugim</li>
+	<li>명물 - wyjątkowy, symbol</li>
+	<li>지역 - obszar, region</li>
+	<li>계속되다 - trwać, utrzymywać się</li>
+	<li>수입 - import</li>
+	<li>유통되다 - być dystrybuowanym</li>
+	<li>부유하다 - być zamożnym/bogatym</li>
+	<li>가정 - rodzina</li>
+	<li>늘다 - wzrastać</li>
+	<li>국내 - krajowy (np. dystrybucja)</li>
+</ul>
+
+<h3>번역</h3>
+
+<p>10-1. 부대찌개 집들이 하나 둘 늘면서</p>
+<p>Wraz ze wzrostem liczby restauracji serwujących budae jjigae</p>
+<p>10-2. '의정부 부대찌개 거리'는 지역 명물로도 자리 잡았습니다.</p>
+<p>„ulica budae jjigae w Uijeongbu” stała się lokalnym symbolem.</p>
+<p>11. 한국전쟁이 끝난 후에도 스팸의 인기는 계속됐습니다.</p>
+<p>Po zakończeniu wojny koreańskiej popularność szynki konserwowej utrzymywała się.</p>
+<p>12. 당시에는 수입으로 국내 유통되면서 가격이 비쌌습니다.</p>
+<p>Wówczas importowano ją i dystrybuowano wewnątrz kraju, przez co była droga.</p>
+<p>13. 부유한 가정에서만 먹을 수 있었죠.</p>
+<p>Ten produkt mogły jeść tylko zamożne rodziny.</p>
+
+<h3>어휘</h3>
+
+<ul>
+	<li>섞다 - łączyć, mieszać</li>
+	<li>런천미트 - „luncheon meat” (konserwa mięsna) - rodzaj tańszej konserwy</li>
+	<li>출시되다 -  zostać wprowadzonym na rynek</li>
+	<li>소비자 - konsument</li>
+	<li>눈치 - wyczucie (sytuacji)</li>
+	<li>눈치를 채다 - zauważyć, zdać sobie sprawę</li>
+	<li>확실히 - zdecydowanie</li>
+	<li>금방 - szybko, natychmiast</li>
+	<li>사실 - fakt (prawda)</li>
+	<li>떨어지다 - być gorszym, spadać</li>
+</ul>
+
+<h3>번역</h3>
+
+<p>14-1. 스팸 가격이 비싸다 보니</p>
+<p>W związku z faktem, iż cena szynki konserwowej była wysoka,</p>
+<p>14-2. 닭고기를 섞어 만든 런천미트가 출시됐습니다.</p>
+<p>wprowadzono luncheon meat, czyli konserwę mięsną z dodatkiem kurczaka.</p>
+<p>15. 소비자들도 금방 눈치를 챘습니다.</p>
+<p>Konsumenci szybko to zauważyli.</p>
+<p>16. 스팸보다 런천미트는 확실히 맛이 떨어진다는 사실을요.</p>
+<p>W porównaniu do szynki konserwowej „spam” było oczywiste, że luncheon meat jest zdecydowanie mniej smaczny.</p>
 
 <h3>Źródło:</h3>
 
 <ul>
-	<li><a href="https://incheontoday.com/news/articleView.html?idxno=250441">https://incheontoday.com/news/articleView.html?idxno=250441</a></li>
+	<li><a href="https://n.news.naver.com/mnews/article/648/0000005156">https://n.news.naver.com/mnews/article/648/0000005156</a></li>
 </ul>
 
 </body></html>
