--- a/uj/zajecia/24-25z/wats3-2/zajecia/6/index.html
+++ b/uj/zajecia/24-25z/wats3-2/zajecia/6/index.html
@@ -40,8 +40,17 @@
 <h3>번역</h3>
 
 <p>0. 가난과 외로움에 지쳐… 매년 수천 명 노인이 삶의 끈 놓는다</p>
+<ul>
+	<li>Zmęczeni ubóstwem i samotnością - co roku tysiące osób starszych rezygnuje z życia</li>
+</ul>
 <p>1. 한국 사회 노인들의 고독과 우울증 등 정신건강 문제에 대한 사회적 인식은 높지 않다.</p>
+<ul>
+	<li>Świadomość społeczeństwa koreańskiego na temat samotności, depresji i innych problemów związanych ze zdrowiem psychicznym osób starszych nie jest wysoka.</li>
+</ul>
 <p>2. 한국은 짧은 기간 동안 전 세계 어떤 나라보다도 급속한 경제발전을 이뤘다.</p>
+<ul>
+	<li>Korea Południowa szybciej niż w jakimkolwiek innym kraju na świecie osiągnęła w krótkim czasie gwałtowny rozwój gospodarczy.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -64,9 +73,21 @@
 <h3>번역</h3>
 
 <p>3. 하지만 점진적으로 이뤄나갔어야 할 노인을 위한 인프라, 노인 정신건강에 대한 지원, 사회적 공감대는 충분히 갖추지 못했다.</p>
+<ul>
+	<li>Jednak zbyt wolno rozwijana infrastruktura, wsparcie psychiczne oraz społeczna empatia w stosunku do starszych osób nie są wystarczające.</li>
+</ul>
 <p>4. 특히 정신건강 문제는 연령을 불문하고 스스로가 해결해야 하는 문제로 치부됐다.</p>
+<ul>
+	<li>W szczególności problemy zdrowia psychicznego niezależnie od wieku były uznawane za problemy, które powinno się rozwiązywać samodzielnie.</li>
+</ul>
 <p>5-1. 한국 노인들의 고독과 우울증은 원인을 명확하게 지목할 수 없지만</p>
+<ul>
+	<li>Choć nie można wskazać na jasne źródło samotności i depresji wśród koreańskich seniorów,</li>
+</ul>
 <p>5-2. 노인 빈곤 문제는 가장 큰 이유 중 하나다.</p>
+<ul>
+	<li>to ubóstwo jest jednym z głównych powodów.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -87,10 +108,27 @@
 <h3>번역</h3>
 
 <p>6-1. 경제적으로 풍요로운 노년층보다는 빈곤한 노인이 더 고독하고 우울해 보이는 것은</p>
+<ul>
+	<li>Fakt, że w porównaniu do zamożnych seniorów ubogie osoby starsze są bardziej samotne i podatne na depresję,</li>
+</ul>
 <p>6-2. 우리 모두가 일상 속에서 경험하고 있다.</p>
+<ul>
+	<li>jest czymś, co wszyscy odczuwamy w życiu codziennym.</li>
+</ul>
 <p>7. 한국의 노인들은 전 세계 주요국 노인에 비해서 빈곤하다.</p>
+<ul>
+	<li>Seniory koreańscy odznaczają się znaczącą biedą na tle seniorów z wiodących państw świata.</li>
+</ul>
 <p>8-1. 지난 2020년 경제협력개발기구(OECD)가 조사한 결과에 따르면</p>
+<ul>
+	<li>Według badań przeprowadzonych przez Organizację Współpracy Gospodarczej i Rozwoju (OECD) w 2020 roku,</li>
+</ul>
 <p>8-2. 한국의 65세 이상 노인 인구 중 소득 빈곤율은 40.4%를 기록했다.</p>
+<ul>
+	<li>odsetek ubóstwa majątkowego społeczeństwa koreańskiego powyżej 65 roku życia wyniósł 40,4%.</li>
+</ul>
+
+<h2 class="homework">Praca domowa</h2>
 
 <h3>어휘</h3>
 
@@ -110,10 +148,57 @@
 <h3>번역</h3>
 
 <p>9. 인구구조 변화에 따라 혼자 사는 노인도 크게 증가하고 있다.</p>
+<ul>
+	<li>Patrząc na zmiany struktury populacji, ilość osób starszych mieszkających samemu bardzo wzrasta. <span class="correct">[1/2 - wraz ze zmianami; również]</span></li>
+	<li>W związku ze zmianami w strukturze ludności, liczba starszych osób żyjących samotnie również znacznie wzrosła <span class="correct-maxpoints">[2/2]</span></li>
+	<li>Ze zmianą demograficzną wzrasta liczba osób starszych, które mieszkają same. <span class="correct">[1/2 - wraz ze zmianą; również; znacznie wzrasta]</span></li>
+	<li>Wraz ze zmianami w strukturze populacji gwałtownie wzrosła liczba starszych osób mieszkających samotnie. <span class="correct">[1,5/2 - gwałtownie → znacznie]</span></li>
+	<li>W wyniku zmian struktur społecznych, ilość osób starszych mieszkających samotnie wzrasta. <span class="correct">[1/2 - również; znacznie wzrasta]</span></li>
+	<li>Ze względu na zmianę struktury populacji, liczba ludzi starszych mieszkających samotnie znacznie się zwiększa. <span class="correct">[1,5/2 - również]</span></li>
+	<li>W związku ze zmianami struktury demograficznej znacznie wzrasta liczba seniorów mieszkających samotnie. <span class="correct">[1,5/2 - również]</span></li>
+</ul>
 <p>10. 통계청에 따르면 지난해 노인 1인 가구는 213만8000가구를 기록했다.</p>
+<ul>
+	<li>Wg Głównego Urzędu Statystycznego odnotowano 2 138 000 gospodarstw domowych z jedną osobą starszą, które się zmagają problemami. <span class="correct">[1/2 - nie ma „problemów” w zdaniu koreańskim]</span></li>
+	<li>Zgodnie z danymi Głównego Urzędu Statystycznego liczba gospodarstw domowych starszych osób wyniosła 2 138 000 <span class="correct">[1,5/2 - jednoosobowych]</span></li>
+	<li>Według Głównego Urzędu Statystycznego liczba starszych osób, które prowadzą gospodarstwo jednoosobowe w ubiegłym roku wyniosła 2 138 000 osób. <span class="correct-maxpoints">[2/2]</span></li>
+	<li>Według danych z zeszłego roku, w Korei było 2,138 miliona gospodarstw domowych, w których mieszkali tylko seniorzy. <span class="correct">[1/2 - ubiegłego roku; jednoosobowych gospodarstw]</span></li>
+	<li>Według Głównego Urzędu Statystycznego, w poprzednim roku liczba jednoosobowych gospodarstw domowych, w których mieszkają seniorzy wyniosła 2138000. <span class="correct-maxpoints">[2/2]</span></li>
+	<li>Według Głównego Urzędu Statystycznego, w ubiegłym roku liczba jednoosobowych gospodarstw domowych osób starszych wynosiła 2 138 000. <span class="correct-maxpoints">[2/2]</span></li>
+	<li>Według Głównego Urzędu Statystycznego w zeszłym roku liczba jednoosobowych gospodarstw domowych starszych osób wyniosła 2 138 000. <span class="correct">[1,5/2 - ubiegłym roku]</span></li>
+</ul>
 <p>11, 즉, 전체 일반 가구 중 9.7%를 차지했다.</p>
+<ul>
+	<li>Czyli, te gospodarstwa domowe zajmują 9,7% z pośród wszystkich. <span class="correct">[1,5/2 - zajmowały]</span></li>
+	<li>Innymi słowy, zajmowały 9.7% zwykłych gospodarst domowych <span class="correct">[1,5/2 - wszystkich]</span></li>
+	<li>Innymi słowy, jest to 9,7% wszystkich przeciętnych gospodarstw domowych. <span class="correct-maxpoints">[2/2]</span></li>
+	<li>Innymi słowy, stanowiły one 9,7% wszystkich gospodarstw domowych. <span class="correct">[1,5/2 - zwykłych]</span></li>
+	<li>Innymi słowy, stanowi to 9,7% zwykłych gospodarstw domowych. <span class="correct">[1,5/2 - wszystkich]</span></li>
+	<li>Innymi słowy, wśród wszystkich gospodarstw domowych stanowiły one 9,7%. <span class="correct">[1,5/2 - zwykłych]</span></li>
+	<li>Innymi słowy, stanowiły 9,7% wszystkich zwykłych gospodarstw domowych. <span class="correct-maxpoints">[2/2]</span></li>
+</ul>
 <p>12. 전체 가구 10가구 중 1가구는 노인 혼자 사는 가구인 셈이다.</p>
+<ul>
+	<li>To tak jakby na 10 gospodarstw domowych 1 jest zamieszkiwane przez samodzielnie mieszkającą osobę starszą. <span class="correct-maxpoints">[2/2]</span></li>
+	<li>Oznacza to, że jedno na dziesięć gospodarstw domowych to gospodarstwo w którym starsza osoba mieszka samotnie. <span class="correct-maxpoints">[2/2]</span></li>
+	<li>Z 10 gospodarstw domowych jedno to gospodarstwo, w którym mieszka samotny senior. <span class="correct">[1,5/2 - oznacza to, że]</span></li>
+	<li>Jedno na dziesięć koreańskich gospodarstw to gospodarstwo samotnego seniora. <span class="correct">[1,5/2 - oznacza to, że]</span></li>
+	<li>Można powiedzieć, że jedno na dziesięć wszystkich gospodarstw domowych jest zamieszkiwane przez samotną, starszą osobę. <span class="correct-maxpoints">[2/2]</span></li>
+	<li>Oznacza to, że jedno na dziesięć gospodarstw domowych należy do samotnie żyjącej osoby starszej. <span class="correct-maxpoints">[2/2]</span></li>
+	<li>Można powiedzieć, że w co dziesiątym gospodarstwie domowym mieszka samotny senior. <span class="correct-maxpoints">[2/2]</span></li>
+</ul>
 <p>13. 빈곤하고 고독한 노인일수록 더 많은 우울감을 느끼는 것이다.</p>
+<ul>
+	<li>Ubóstwo i samotność powoduje, że seniorzy bardziej odczuwają depresję. <span class="correct-maxpoints">[2/2]</span></li>
+	<li>Im starsza osoba jest biedniejsza i bardziej samotna, tym więcej odczuwa smutku <span class="correct">[1,5/2 - depresji]</span></li>
+	<li>Biedne i samotne osoby starsze czują się bardziej dotknięte depresją. <span class="correct-maxpoints">[2/2]</span></li>
+	<li>Im bardziej biedny i samotny jest senior, tym większe odczuwanie depresyjnego nastroju. <span class="correct-maxpoints">[2/2]</span></li>
+	<li>Im bardziej uboga i samotna jest osoba starsza tym bardziej czuje się depresyjnie. <span class="correct-maxpoints">[2/2]</span></li>
+	<li>Im bardziej ubogie i samotne są osoby starsze, tym bardziej cierpią na depresję. <span class="correct-maxpoints">[2/2]</span></li>
+	<li>Im uboższy i bardziej osamotniony jest senior, tym bardziej narażony na depresję. <span class="correct">[1,5/2 - cierpi z powodu depresji]</span></li>
+</ul>
+
+<hr class="homework">
 
 <h3>어휘</h3>
 
@@ -136,8 +221,17 @@
 <h3>번역</h3>
 
 <p>14. 학력 수준이 낮고 도시보다 농어촌에 거주하는 노인이 빈곤과 우울증에 더 많이 노출된다.</p>
+<ul>
+	<li>Osoby starsze o niskim poziomie wykształcenia i zamieszkujące obszary wiejskie są bardziej narażone na ubóstwo i depresję niż osoby mieszkające w miastach. <span class="correct-maxpoints">[2/2]</span></li>
+</ul>
 <p>15. 또 빈곤과 우울감 사이에는 양의 상관관계가 있고 통계적으로도 유의성이 있는 것이다.</p>
+<ul>
+	<li>W dodatku istnieje dodatnia korelacja pomiędzy ubóstwem a depresją i statystycznie ma ona znaczenie. <span class="correct">[1,5/2 - również statystycznie]</span></li>
+</ul>
 <p>16. 우울증은 전 연령층에서 나타나지만 고령층이 전체 환자 중 가장 비중이 크다.</p>
+<ul>
+	<li>Depresja pojawia się we wszystkich grupach wiekowych, ale z całości największy odsetek pacjentów stanowią osoby starsze. <span class="correct-maxpoints">[2/2]</span></li>
+</ul>
 
 <h3>어휘</h3>
 
