--- a/uj/zajecia/24-25z/wats3-2/index.html
+++ b/uj/zajecia/24-25z/wats3-2/index.html
@@ -202,13 +202,13 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 4</td>
-				<td class="schedule-presentation">Diana Grigoryan - kultura megalityczna</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Diana Grigoryan</td>
+				<td class="schedule-presentation">kultura megalityczna</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 5</td>
-				<td class="schedule-presentation">Sofiia Martynenko - kuchnia koreańska w czasie wojny koreańskiej</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Sofiia Martynenko</td>
+				<td class="schedule-presentation">kuchnia koreańska w czasie wojny koreańskiej</td>
 			</tr>
 		</tbody>
 		<tbody>
@@ -244,8 +244,8 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 7</td>
-				<td class="schedule-presentation">Bogdan Borawski - techno-orientalizm</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Bogdan Borawski</td>
+				<td class="schedule-presentation">techno-orientalizm</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 8</td>
