--- a/viiilo/zajecia/24-25z/jk2/zajecia/4/index.html
+++ b/viiilo/zajecia/24-25z/jk2/zajecia/4/index.html
@@ -65,4 +65,15 @@
 	</li>
 </ul>
 
+<h2>Dodatkowe zadania</h2>
+
+<ul>
+	<li>
+		<div>strona 20, zadanie 1</div>
+		<div>
+			<audio controls src="viiilo/zajecia/24-25z/jk2/pliki/SJ_E_1B_04_1.mp3"></audio>
+		</div>
+	</li>
+</ul>
+
 </body></html>
