--- a/viiilo/zajecia/24-25z/jk2/zajecia/5-3/index.html
+++ b/viiilo/zajecia/24-25z/jk2/zajecia/5-3/index.html
@@ -13,34 +13,53 @@
 
 <h1>Język koreański - poziom zaawansowany</h1>
 
-<h2>손글씨</h2>
+<h2>높임법 (honoryfikatywność)</h2>
 
-<ul class="gallery">
-	<li><a href="viiilo/zajecia/24-25z/jk2/zajecia/5-2/img/uklony.jpg"><img src="viiilo/zajecia/24-25z/jk2/zajecia/5-2/img/uklony_120px.jpg" alt="ukłony"></a></li>
-	<li><a href="viiilo/zajecia/24-25z/jk2/zajecia/5-2/img/인사종류.png"><img src="viiilo/zajecia/24-25z/jk2/zajecia/5-2/img/인사종류_120px.png" alt="ukłony"></a></li>
-</ul>
-
-<h3>Rodzaje witania się</h3>
+<h3>Rodzaje honoryfikatywności</h3>
 
 <h3>어휘</h3>
 
 <ul>
-	<li>인사 - przywitanie</li>
-	<li>인사하다 - witać się</li>
-	<li>도(°) - stopień</li>
-	<li>절하다 - kłaniać się</li>
-	<li>고개를 숙이다 - skinąć głową</li>
-	<li>허리를 굽히다 - pochylić się</li>
-	<li>무릎을 꿇다 - uklęknąć</li>
-	<li>악수하다 - podać rękę</li>
-	<li>포옹하다 - przytulić (się)</li>
+	<li>osobowa (상대 높임법): podział na banmal (반말) i jondenmal (존댓말), np. 가세요/가라</li>
+	<li>podmiotowa (주체 높임법): formy używane w stosunku do podmiotu rozmowy, np. 그 사람/그분</li>
+	<li>przedmiotowa (객체 높임법): czasowniki używane w stosunku do osób, np. 드리다, 여쭙다</li>
+	<li>leksykalna (어휘 높임법): słownictwo używane w zależności od osoby, np. 밥/진지, 집/댁</li>
+	<li>morfologiczna (형태 높임법): gramatyczne końcówki dodawane do części mowy, np. 가다/가시다, 부모/부모님께서</li>
 </ul>
 
-<h3>보충 자료</h3>
+<h3>Stopnie honoryfikatywności osobowej</h3>
 
 <ul>
-	<li><a href="https://bizforms.co.kr/bizcontents/manner/5.asp">직장인 예절</a></li>
-	<li><a href="https://nise.go.kr/eduCnts/sub04/page1101.jsp">직장 인사 예절</a></li>
+	<li>formalny (격식체)
+		<ul>
+			<li>jondaenmal (존댓말)
+				<ul>
+					<li><strong>bardzo uprzejmy (아주높임): 하십시오체, np. 갑니다, 갑니까, 가십시오</strong></li>
+					<li>średnio uprzejmy (예사높임): 하오체, np. 갑시다, 가시오</li>
+				</ul>
+			</li>
+			<li>banmal (반말)
+				<ul>
+					<li>średnio nieuprzejmy (예사낮춤): 하게체, np. 가게</li>
+					<li>bardzo nieuprzejmy (아주낮춤): 해라체, np. 가라</li>
+				</ul>
+			</li>
+		</ul>
+	</li>
+	<li>nieformalny (비격식체)
+		<ul>
+			<li>jondaenmal (존댓말)
+				<ul>
+					<li><strong>uniwersalnie uprzejmy (두루높임): 해요체, np. 가요</strong></li>
+				</ul>
+			</li>
+			<li>banmal (반말)
+				<ul>
+					<li>uniwersalnie nieuprzejmy (두루낮춤): 해체, np. 가</li>
+				</ul>
+			</li>
+		</ul>
+	</li>
 </ul>
 
 </body></html>
